<resources>
    <string name="app_name">TugasBesar-03</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- activity_manga_detail layout usage -->
    <string name="amd_tv_judul_manga">Judul Manga</string>
    <string name="amd_tv_description">Manga Description</string>
    <string name="amd_tv_category">Category</string>
    <string name="amd_tv_info">Manga Information</string>
    <string name="amd_tv_author_manga">Author:</string>
    <string name="amd_tv_artist_manga">Artist:</string>
    <string name="amd_tv_released_manga">Released:</string>
    <string name="amd_tv_chapter">Chapters</string>

    <!-- activity_main_bottom_navbar layout usage -->
    <string name="ambn_tv_previous">Previous Page</string>
    <string name="ambn_tv_next">Next Page</string>

    <!-- page_list_item layout usage -->
    <string name="pli_tv_page">1</string>

    <!-- manga_list_item layout usage -->
    <string name="mli_tv_mangaTitle">Judul Manga</string>
</resources>
